--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,4 @@
 {{ define "main" }}
-  <header>
-    {{ with .Params.banner }}
-      <img src="{{ . }}" alt="Banner">
-    {{ end }}
-    {{ with .Params.logo }}
-      <img src="{{ . }}" alt="Logo">
-    {{ end }}
-    <h1>{{ .Title }}</h1>
-    <h2>{{ .Params.subtitle }}</h2>
-  </header>
+  <h1>TEST123</h1>
   {{ .Content }}
 {{ end }}
